# Agentic-AI-QA-juridico

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pacotes.txt  pyproject.toml  requirements.txt
notebooks/: Notebook_final_Agentic_AI.ipynb  qa_rag_agent.ipynb  qa_rag_agent_(2).ipynb
