[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic_ai_iseg"
version = "0.1.0"
description = "Teaching demo for agentic AI (LangGraph + LlamaIndex) with API and Docker deployment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "openai>=2.7.2",
  "python-dotenv>=0.9.0",
  "langchain>=1.0.7",
  "langgraph>=1.0.3",
  "langchain-openai>=1.0.3",
  "langchain_experimental>=0.4.0",
  "langsmith>=0.4.43",
  "faiss-cpu>=1.13.0",
  "llama-index-core>=0.14.8",
  "llama-index-vector-stores-faiss>=0.5.1",
  "llama-index-embeddings-huggingface>=0.6.1",
  "sentence-transformers>=5.1.2",
  "matplotlib>=3.10.0",
  "fastapi>=0.124.0",
  "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
]
